--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,10 @@
         <title>Barbearia Alura</title>
         <link rel="stylesheet" href="style.css">
 
-    </head>
+    <style>
 
-    <body>
+    </style>
+</head>
         <h1 style="text-align: center; background: #CCCCCC">Sobre a Barbearia Alura </h1>
         
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o
